--- a/index.html
+++ b/index.html
@@ -1,47 +1,77 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="CSS/style.css">
-	<title> Responsive Webpage</title>
+
+<title>Module 3</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="style1.css">
+
+
+
 <body>
-	<div>
-		<h1>Seven Wonders</h1>
-	</div>
-	<div class="row">
-		<div class="col-sm-12 col-md-6 col-lg-4">
-			<section id="section-1">
-				<h2>
-					Taj Mahal
-				</h2>
-				<p>
-					The Taj Mahal, a breathtaking symbol of eternal love, stands as a testament to the timeless beauty of Mughal architecture. Commissioned by Emperor Shah Jahan in memory of his beloved wife Mumtaz Mahal, this ivory-white marble mausoleum graces the banks of the Yamuna River in Agra, India. Completed in 1653, the Taj Mahal is a masterpiece, adorned with intricate carvings, delicate inlays, and a mesmerizing symmetrical design. Its iconic dome and four minarets create a harmonious blend of Persian, Islamic, and Indian architectural styles. Recognized as a UNESCO World Heritage Site, the Taj Mahal continues to captivate millions with its unparalleled grandeur and romantic allure.
-				</p>
-			</section>
-		</div>
-		<div class="col-sm-12 col-md-6 col-lg-4">
-			<section id="section-2">
-				<h2>
-					Machu Picchu
-				</h2>
-				<p>
-					Machu Picchu, the iconic Incan citadel nestled high in the Andes mountains of Peru, is a testament to ancient engineering and architectural prowess. Built in the 15th century, this mystical site served as a retreat for Incan emperors. Its breathtaking location, perched on a ridge amidst lush green mountains, adds to its allure. The precision of the stone masonry, with massive blocks fitting seamlessly together without mortar, reflects the Inca's advanced construction techniques. Machu Picchu's designation as a UNESCO World Heritage Site and its inclusion among the New Seven Wonders of the World highlight its cultural and historical significance.
-				</p>
-			</section>
-		</div>
-		<div class="col-sm-12 col-md-12 col-lg-4">
-			<section id="section-3">
-				<h2>
-					Great Wall of China
-				</h2>
-				<p>
-					The Great Wall of China, a testament to human ingenuity and perseverance, stands as one of the most iconic architectural marvels in history. Stretching over 13,000 miles across the northern borders of China, the wall was built over centuries, with various dynasties contributing to its construction. Originally conceived as a defense against invasions, the wall's purpose evolved beyond military strategy, serving as a symbol of China's rich cultural heritage. The wall's imposing stone structure winds through diverse landscapes, from rugged mountains to vast plains, offering breathtaking views and a tangible connection to China's past. Today, it remains a symbol of the country's enduring strength and resilience.
-				</p>
-			</section>
-		</div>
-	</div>
+
+
+<nav class="navbar" id="top">
+  <div class="container-fluid">
+
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">Food, LLC</a>
+    </div>
+
+    <div class="collapse" id="myNavbar">
+      <ul class="nav navbar-nav visible-xs">
+        <li><a class="menu-item" href="#">Biriyani</a></li>
+        <li><a class="menu-item" href="#">South Indian</a></li> 
+        <li><a class="menu-item" href="#">Continental</a></li> 
+      </ul>
+    </div>
+
+  </div>
+</nav>
+
+<h1 class="main-title">Our Menu</h1>
+
+
+
+<div class="row">
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="content-box">
+      <p class="item-name">Biriyani</p>
+      <p>Biriyani, a culinary masterpiece, embodies the rich tapestry of flavors woven together in a single dish. Originating from the Mughal era, this aromatic delight is a symphony of fragrant basmati rice, tenderly cooked meat, or vegetables, infused with an assortment of spices and herbs. Each grain of rice carries the essence of saffron, cardamom, cloves, and cinnamon, intermingling with the succulent meat or vibrant vegetables. The meticulous layering of ingredients and slow cooking process allows the flavors to harmonize, creating a medley that tantalizes the taste buds. Whether it’s the Hyderabadi Dum Biriyani with its distinct layers or the Kolkata-style biriyani with its subtle yet tantalizing flavors, each regional variation adds a unique touch to this beloved dish. Biriyani is not merely a meal but an experience that unites communities, transcending cultural boundaries with its irresistible allure. Its aroma alone is enough to evoke a sense of nostalgia and anticipation, promising a culinary journey that satisfies both the palate and the soul.<a href="#top">(Back to Top)</a></p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="content-box">
+      <p class="item-name">South Indian</p>
+      <p>South Indian cuisine is a vibrant tapestry of flavors, textures, and aromas that dance on the taste buds, offering a tantalizing experience. Distinguished by its extensive use of rice, lentils, and coconut, South Indian fare boasts a diverse range of dishes. The ubiquitous dosa, a thin, crispy crepe made from fermented rice and lentil batter, is a staple, often served with an array of chutneys and sambar—a savory lentil-based vegetable stew. Idli, soft and spongy steamed rice cakes, are another beloved item, often paired with coconut chutney or spicy lentil powder. The tantalizing aroma of freshly tempered spices in dishes like the flavorful rasam or the creamy coconut-based vegetable stew called avial exemplifies the depth and richness of South Indian culinary traditions. Seafood delicacies like meen curry (fish curry) or prawn masala showcase the coastal influence, while desserts like payasam, a sweet rice pudding, offer a delightful finale to a sumptuous South Indian meal.<a href="#top">(Back to Top)</a></p>
+    </div>
+  </div>
+
+
+  <div class="col-lg-4 col-md-12 col-sm-12">
+    <div class="content-box">
+      <p class="item-name">Continental</p>
+      <p>Continental cuisine is a delightful blend of flavors and techniques originating from European countries like France, Italy, Spain, and Germany, among others. It embodies a rich diversity of tastes, presenting a fusion of culinary traditions that vary from region to region. One can savor the buttery indulgence of French pastries, the aromatic and herb-infused Italian pasta dishes, the hearty German sausages, and the exquisite Spanish tapas, each offering a unique gastronomic experience. Continental food is characterized by its emphasis on high-quality ingredients, meticulous preparation methods, and a deep respect for culinary craftsmanship. From the creamy sauces of French cuisine to the robust flavors of Mediterranean fare, the diversity within Continental food caters to a wide array of palates. It often features a harmonious balance between meats, fresh vegetables, aromatic herbs, and delicate spices, contributing to its reputation for sophistication and depth of taste. Whether it's the decadence of Belgian chocolates or the comforting warmth of Swiss fondue, Continental cuisine invites food enthusiasts on a culinary journey that celebrates diversity and culinary finesse.<a href="#top">(Back to Top)</a></p>
+    </div>
+  </div>
+
+</div>
+
+
 </body>
 </html>
